# Brique-Conversationnelle-Robocup

./: .gitignore  README.md  requirements.txt
doc/: main.py
doc/nlp/: README.md  init.py
doc/nlp/archive_test/: spacyTest.py  test.py  test10.py  test11.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py
doc/stt/: README.md
doc/stt/package_STT/: STT.py  STT_Whisper_Cpp_Binder.py  STT_Whisper_cpp.py  Vosk.py  Whisper.py  download_model.py  main.py
doc/stt/package_STT/test_ecxecution/: STT_Whisper_Cpp_Binder.py  STT_Whisper_cpp.py
doc/stt/test/: microphone_test.py  test_ctype.cpp  test_ctype.py  test_pvcheetah.py  test_vock.py  test_wgisper_cpp.py  test_whisper.py  test_whisper_cpp.py
doc/stt/test/whisper.cpp-master/: CMakeLists.txt  Makefile  test.py
doc/stt/test/whisper.cpp-master/examples/: CMakeLists.txt
doc/stt/test/whisper.cpp-master/examples/stream/: CMakeLists.txt  stream.cpp  stream.h
doc/tts/: README.md  TTSPlayer.py
doc/tts/archive_test/coquiTTS/: README.md  coquiTTS.py  list-model.txt
doc/tts/archive_test/espeak/: text.txt
doc/tts/archive_test/gTTS/: gTTS.py
doc/tts/archive_test/mbrola/: mbrola.py
doc/tts/archive_test/mimic3/: mimic3.py
doc/tts/archive_test/picotts/: app.py
launch/: brique_discution_launch.py
src/interfaces_services/: CMakeLists.txt  package.xml
src/interfaces_services/srv/: OrderFormatter.srv  SentenceCreator.srv  SentenceSplitter.srv  YesOrNo.srv
src/main/: package.xml  setup.py
src/main/main/: main.py
src/nlp/: package.xml  requirements.txt  setup.cfg  setup.py
src/nlp/nlp/: nlp.py  test_client.py
src/stt/: package.xml  requirements.txt  setup.cfg  setup.py
src/stt/stt/: STT_Whisper_Cpp_Binder.py  STT_Whisper_cpp.py  download_model.py
src/tts/: package.xml  requirements.txt  setup.py
src/tts/tts/: test_client.py  tts.py
(+18 files in other folders)
